gclb/traefik/httpbin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: httpbin    
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: http
